# gs-mcp

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  catatan.md  docker-compose.yaml  docker-compose.yml
ahp-backend/: entrypoint.sh
ahp-backend/ahp_mce/: settings.py
ahp-backend/kobo_mce/: api_urls.py  views.py
ahp-backend/kobo_mce/fixtures/: initial_experts.json
ahp-backend/kobo_mce/migrations/: 0002_seed_initial_experts.py
ahp-backend/kobo_mce/static/admin_extra/: admin_extra.css
geoserver-mcp/: pyproject.toml  smithery.yaml
geoserver-mcp/src/geoserver_mcp/: __init__.py  main.py
gs-ai-bridge/: .dockerignore  Dockerfile  README.md  requirements.txt
gs-ai-bridge/src/gs_ai_bridge/: __init__.py  deepseek.py  main.py  mcp_client.py  tools.py
init/: Dockerfile  init.py
seed/: Dockerfile  README.md  seed.sh
seed/geojson/: .gitignore
stacking/: .env
