[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoserver-mcp"
version = "0.4.0"
description = "A GeoServer MCP server implementation that enhances LLM capabilities with geospatial data and mapping services via GeoServer REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Nazari Ashani"},
    {name = "GeoServer MCP Contributors"},
]
keywords = ["mcp", "geoserver", "llm", "geospatial", "ogc", "wfs", "wms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp==1.6.0",
    "geoserver-rest==2.9.1",
    "seaborn",
]

[project.scripts]
geoserver-mcp = "geoserver_mcp.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/geoserver_mcp"]
